remove error logging

--- a/package.json
+++ b/package.json
@@ -10,7 +10,5 @@
   },
   "main": "index.js",
   "devDependencies": {},
-  "dependencies": {
-    "source-map-support": "^0.2.7"
-  }
+  "dependencies": {}
 }
